--- a/vue3实现瀑布流布局/index.html
+++ b/vue3实现瀑布流布局/index.html
@@ -62,6 +62,20 @@
         {height:310,top:0,left:0},
         {height:230,top:0,left:0},
         {height:230,top:0,left:0},
+        {height:290,top:0,left:0},
+        {height:60,top:0,left:0},
+        {height:240,top:0,left:0},
+        {height:310,top:0,left:0},
+        {height:220,top:0,left:0},
+        {height:150,top:0,left:0},
+        {height:90,top:0,left:0},
+        {height:210,top:0,left:0},
+        {height:190,top:0,left:0},
+        {height:170,top:0,left:0},
+        {height:110,top:0,left:0},
+        {height:310,top:0,left:0},
+        {height:230,top:0,left:0},
+        {height:230,top:0,left:0},
         {height:190,top:0,left:0},
         {height:260,top:0,left:0},
       ],
