--- a/vue3-theWaterfallFlow/index.html
+++ b/vue3-theWaterfallFlow/index.html
@@ -4,40 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdn.bootcdn.net/ajax/libs/vue/3.2.26/vue.global.prod.js"></script>
   <title>瀑布流布局</title>
   <style>
-    *{
-      margin:0;
-      padding:0;
-    }
-    .container{
-      position: relative;
-      width:60%;
-      height:auto;
-      margin:0 auto;
-      border:1px solid red;
-      box-sizing: border-box;
-      list-style:none;
-    }
-    .container > li{
-      position:absolute;
-    }
     .container > li > span{
-      display:block;
       width:calc(100% - 10px);
       height:calc(100% - 10px);
-      margin:5px;
-      border:1px solid red;
-      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
-  <div id="app">
-    <ul class="container" :style="{'height':maxHeight+'px'}">
-      <li v-for="(item,index) in imgList" :key="index" :style="{'top':item.top+'px','left':item.left+'%','width':childWidth+'%','height':item.height+'px'}" >
-        <span></span>
+  <div id="app" class="m-0 p-0">
+    <ul class="container relative w-3/5 h-auto my-0 mx-auto border border-black list-none" :style="{'height':maxHeight+'px'}">
+      <li class="absolute" v-for="(item,index) in imgList" :key="index" :style="{'top':item.top+'px','left':item.left+'%','width':childWidth+'%','height':item.height+'px'}" >
+        <span class="block m-1.5 border border-black"></span>
       </li>
     </ul>
   </div>
@@ -58,20 +39,6 @@
         {height:210,top:0,left:0},
         {height:190,top:0,left:0},
         {height:270,top:0,left:0},
-        {height:110,top:0,left:0},
-        {height:310,top:0,left:0},
-        {height:230,top:0,left:0},
-        {height:230,top:0,left:0},
-        {height:290,top:0,left:0},
-        {height:60,top:0,left:0},
-        {height:240,top:0,left:0},
-        {height:310,top:0,left:0},
-        {height:220,top:0,left:0},
-        {height:150,top:0,left:0},
-        {height:90,top:0,left:0},
-        {height:210,top:0,left:0},
-        {height:190,top:0,left:0},
-        {height:170,top:0,left:0},
         {height:110,top:0,left:0},
         {height:310,top:0,left:0},
         {height:230,top:0,left:0},
